--- a/FilesAndStuffs/ImportsDataFrom3rdParty/TalmudBavli/Code/FromXMLToDB/settings.ini
+++ b/FilesAndStuffs/ImportsDataFrom3rdParty/TalmudBavli/Code/FromXMLToDB/settings.ini
@@ -2,3 +2,17 @@
 Server = LAPTOP-G7A1FT2J
 [Path]
 creation_of_tables = C:\\Git\\limud-kodesh\\scripts\\ki_metzion\\Creation_of_tables.sql
+toshba_table = C:\\Git\\limud-kodesh\\ki_metzion\\schema\\TABLES\\TOSHBA.sql
+talmud_type_table = C:\\Git\\limud-kodesh\\ki_metzion\\schema\\TABLES\\TALMUD_TYPE.sql
+seder_table = C:\\Git\\limud-kodesh\\ki_metzion\\schema\\TABLES\\SEDER.sql
+talmud_seder_table = C:\\Git\\limud-kodesh\\ki_metzion\\schema\\TABLES\\TALMUD_SEDER.sql
+massechet_table = C:\\Git\\limud-kodesh\\ki_metzion\\schema\\TABLES\\MASSECHET.sql
+talmud_massechet_table = C:\\Git\\limud-kodesh\\ki_metzion\\schema\\TABLES\\TALMUD_MASSECHET.sql
+massechet_perek_table = C:\\Git\\limud-kodesh\\ki_metzion\\schema\\TABLES\\MASSECHET_PEREK.sql
+
+toshba_data = C:\\Git\\limud-kodesh\\ki_metzion\\data\\toshba.sql
+talmud_type_data = C:\\Git\\limud-kodesh\\ki_metzion\\data\\talmud_type.sql
+seder_data = C:\\Git\\limud-kodesh\\ki_metzion\\data\\seder.sql
+talmud_seder_data = C:\\Git\\limud-kodesh\\ki_metzion\\data\\talmud_seder.sql
+massechet_data = C:\\Git\\limud-kodesh\\ki_metzion\\data\\massechet.sql
+talmud_massechet_data = C:\\Git\\limud-kodesh\\ki_metzion\\data\\talmud_massechet.sql
