Get path of each XML file

--- a/FilesAndStuffs/ImportsDataFrom3rdParty/TalmudBavli/Code/FromXMLToDB/settings.ini
+++ b/FilesAndStuffs/ImportsDataFrom3rdParty/TalmudBavli/Code/FromXMLToDB/settings.ini
@@ -16,3 +16,5 @@ seder_data = C:\\Git\\limud-kodesh\\ki_metzion\\data\\seder.sql
 talmud_seder_data = C:\\Git\\limud-kodesh\\ki_metzion\\data\\talmud_seder.sql
 massechet_data = C:\\Git\\limud-kodesh\\ki_metzion\\data\\massechet.sql
 talmud_massechet_data = C:\\Git\\limud-kodesh\\ki_metzion\\data\\talmud_massechet.sql
+
+base_path_of_xml_files = C:\\Git\\limud-kodesh\\FilesAndStuffs\\ImportsDataFrom3rdParty\\TalmudBavli\\Code\\shas_XML\\
