--- a/FilesAndStuffs/ImportsDataFrom3rdParty/TalmudBavli/Code/DB_Table_creation/settings.ini
+++ b/FilesAndStuffs/ImportsDataFrom3rdParty/TalmudBavli/Code/DB_Table_creation/settings.ini
@@ -1,5 +1,5 @@
 [Sql]
-Server=PSACHIM
+Server=LAPTOP-G7A1FT2J
 [Path]
-schema_dir=c:\git\BitWise\limud-kodesh\ki_metzion\schema
-data_dir=c:\git\BitWise\limud-kodesh\ki_metzion\data
+schema_dir=C:\Git\limud-kodesh\ki_metzion\schema\
+data_dir=C:\Git\limud-kodesh\ki_metzion\data\
