settings.ini ignore later

--- a/FilesAndStuffs/ImportsDataFrom3rdParty/TalmudBavli/Code/DB_Table_creation/settings.ini
+++ b/FilesAndStuffs/ImportsDataFrom3rdParty/TalmudBavli/Code/DB_Table_creation/settings.ini
@@ -1,5 +1,5 @@
 [Sql]
 Server=DESKTOP-3BOFE01\MSSQLSERVER2
 [Path]
-schema_dir=C:\Work\Git\limud-kodesh\ki_metzion\schema
-data_dir=C:\Work\Git\limud-kodesh\ki_metzion\data
+schema_dir=C:\Git\limud-kodesh\ki_metzion\schema
+data_dir=C:\Git\limud-kodesh\ki_metzion\data
