--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ database/DB_Table_creation/tanakh_sefer_perek_insert/.idea/
 database/DB_Table_creation/.idea/
 ImportsData/TalmudBavli/FromXMLToDB/.idea/
 ImportsData/TalmudBavli/FromXMLToDB/temp_csv_insert.csv
+UI/UI_MAIN_PROJECT/config/database.php
+UI/UI_MAIN_PROJECT/composer.lock
