--- a/UI/UI_MAIN_PROJECT/package.json
+++ b/UI/UI_MAIN_PROJECT/package.json
@@ -19,6 +19,7 @@
         "sass-loader": "^7.1.0"
     },
     "dependencies": {
-        "mdbootstrap": "^4.12.0"
+        "mdbootstrap": "^4.12.0",
+        "simple-parallax-js": "^5.3.0"
     }
 }
